add adventOfCode2023 - Day 14: Parabolic Reflector Dish

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 991 µs\n"
      ]
     },
     {
@@ -320,7 +320,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
@@ -413,7 +413,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 997 µs\n"
      ]
     },
     {
@@ -497,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1.06 ms\n"
      ]
     },
     {
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1.04 ms\n"
      ]
     },
     {
@@ -668,7 +668,7 @@
      "text": [
       "30\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -812,7 +812,7 @@
      "text": [
       "35\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 986 µs\n"
+      "Wall time: 1.01 ms\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 958 µs\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.67 s\n",
-      "Wall time: 4.67 s\n"
+      "CPU times: total: 4.45 s\n",
+      "Wall time: 4.48 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 562 ms\n",
-      "Wall time: 755 ms\n"
+      "CPU times: total: 1.66 s\n",
+      "Wall time: 8.85 s\n"
      ]
     },
     {
@@ -1277,7 +1277,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.01 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1634,7 +1634,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 609 µs\n"
      ]
     },
     {
@@ -1841,8 +1841,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 125 ms\n",
-      "Wall time: 423 ms\n"
+      "CPU times: total: 78.1 ms\n",
+      "Wall time: 168 ms\n"
      ]
     },
     {
@@ -1902,7 +1902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0039a39d",
+   "id": "d528be22",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1951,7 +1951,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 7.19 ms\n"
+      "Wall time: 3 ms\n"
      ]
     },
     {
@@ -2100,7 +2100,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 20.7 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -2185,7 +2185,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 15.8 ms\n"
+      "Wall time: 1e+03 µs\n"
      ]
     },
     {
@@ -2282,7 +2282,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.24 ms\n"
+      "Wall time: 3 ms\n"
      ]
     },
     {
@@ -2336,7 +2336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38eb2297",
+   "id": "784485ab",
    "metadata": {},
    "source": [
     "### part 2"
@@ -2419,8 +2419,8 @@
      "output_type": "stream",
      "text": [
       "405\n",
-      "CPU times: total: 15.6 ms\n",
-      "Wall time: 3.81 ms\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 4.99 ms\n"
      ]
     }
    ],
@@ -2506,7 +2506,7 @@
      "text": [
       "400\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 18.1 ms\n"
+      "Wall time: 2.94 ms\n"
      ]
     }
    ],
@@ -2555,33 +2555,191 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ef0e7b3",
+   "cell_type": "markdown",
+   "id": "74f964ad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 14: Parabolic Reflector Dish"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5e92fef",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5d87f02a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "ae062699",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"\"\"\n",
+    "O....#....\n",
+    "O.OO#....#\n",
+    ".....##...\n",
+    "OO.#O....O\n",
+    ".O.....O#.\n",
+    "O.#..O.#.#\n",
+    "..O..#O..O\n",
+    ".......O..\n",
+    "#....###..\n",
+    "#OO..#....\n",
+    "\"\"\".strip().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "410cab52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 993 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "136"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import numpy as np\n",
+    "\n",
+    "def assemble(x):\n",
+    "    return 'O'*x.count('O') + '.'*x.count('.')\n",
+    "\n",
+    "def north():\n",
+    "    for j in range(Y):\n",
+    "        arr[:,j] = list('#'.join(map(assemble, ''.join(arr[:,j]).split('#'))))\n",
+    "\n",
+    "arr = np.array([*map(list, s)])\n",
+    "X, Y = arr.shape\n",
+    "north()\n",
+    "sum([np.count_nonzero(arr[i] == 'O')*(X-i) for i in range(X)])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b602c56",
+   "id": "994403c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e83d03",
+   "metadata": {},
+   "source": [
+    "### part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "09b0cf4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"\"\"\n",
+    "O....#....\n",
+    "O.OO#....#\n",
+    ".....##...\n",
+    "OO.#O....O\n",
+    ".O.....O#.\n",
+    "O.#..O.#.#\n",
+    "..O..#O..O\n",
+    ".......O..\n",
+    "#....###..\n",
+    "#OO..#....\n",
+    "\"\"\".strip().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "35098080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 9.33 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import numpy as np\n",
+    "\n",
+    "def assemble(x):\n",
+    "    return 'O'*x.count('O') + '.'*x.count('.')\n",
+    "\n",
+    "def north():\n",
+    "    for j in range(Y):\n",
+    "        arr[:,j] = list('#'.join(map(assemble, ''.join(arr[:,j]).split('#'))))\n",
+    "def south():\n",
+    "    for j in range(Y):\n",
+    "        arr[::-1,j] = list('#'.join(map(assemble, ''.join(arr[::-1,j]).split('#'))))\n",
+    "def west():\n",
+    "    for j in range(X):\n",
+    "        arr[j,:] = list('#'.join(map(assemble, ''.join(arr[j,:]).split('#'))))\n",
+    "def east():\n",
+    "    for j in range(X):\n",
+    "        arr[j,::-1] = list('#'.join(map(assemble, ''.join(arr[j,::-1]).split('#'))))\n",
+    "\n",
+    "def spin_cycle():\n",
+    "    north(); west(); south(); east()\n",
+    "\n",
+    "arr = np.array([*map(list, s)])\n",
+    "X, Y = arr.shape\n",
+    "\n",
+    "seen = [arr.tobytes()]\n",
+    "for k in range(1_000_000_000):\n",
+    "    spin_cycle()\n",
+    "    if arr.tobytes() not in seen:\n",
+    "        seen.append(arr.tobytes())\n",
+    "    else:\n",
+    "        break\n",
+    "\n",
+    "start = seen.index(arr.tobytes())\n",
+    "cycle = seen[start:]\n",
+    "selected = cycle[(1_000_000_000-start)%len(cycle)]\n",
+    "arr = np.frombuffer(selected, dtype='<U1').reshape((X, Y))\n",
+    "sum([np.count_nonzero(arr[i] == 'O')*(X-i) for i in range(X)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e304b50",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2589,7 +2747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdaf495d",
+   "id": "08d1370c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2597,23 +2755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19e4452f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89f39d28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c745133",
+   "id": "d1a79ca4",
    "metadata": {},
    "outputs": [],
    "source": []
