add adventOfCode2023 - Day 15: Lens Library

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -50,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 999 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -175,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 999 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 991 µs\n"
+      "Wall time: 1.85 ms\n"
      ]
     },
     {
@@ -320,7 +320,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 999 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -413,7 +413,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 997 µs\n"
+      "Wall time: 1 ms\n"
      ]
     },
     {
@@ -497,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.06 ms\n"
+      "Wall time: 1 ms\n"
      ]
     },
     {
@@ -668,7 +668,7 @@
      "text": [
       "30\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 1.04 ms\n"
      ]
     }
    ],
@@ -812,7 +812,7 @@
      "text": [
       "35\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.01 ms\n"
+      "Wall time: 1.02 ms\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 1.05 ms\n"
      ]
     }
    ],
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.45 s\n",
-      "Wall time: 4.48 s\n"
+      "CPU times: total: 4.62 s\n",
+      "Wall time: 4.62 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1.66 s\n",
-      "Wall time: 8.85 s\n"
+      "CPU times: total: 1.92 s\n",
+      "Wall time: 11.1 s\n"
      ]
     },
     {
@@ -1276,8 +1276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 998 µs\n"
      ]
     },
     {
@@ -1461,7 +1461,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
@@ -1542,7 +1542,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 1.04 ms\n"
      ]
     },
     {
@@ -1634,7 +1634,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 609 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1751,7 +1751,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1.04 ms\n"
      ]
     },
     {
@@ -1841,8 +1841,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 78.1 ms\n",
-      "Wall time: 168 ms\n"
+      "CPU times: total: 109 ms\n",
+      "Wall time: 2.65 s\n"
      ]
     },
     {
@@ -1951,7 +1951,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 3 ms\n"
+      "Wall time: 39.1 ms\n"
      ]
     },
     {
@@ -2100,7 +2100,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1.04 ms\n"
      ]
     },
     {
@@ -2185,7 +2185,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1e+03 µs\n"
+      "Wall time: 1.96 ms\n"
      ]
     },
     {
@@ -2282,7 +2282,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 3 ms\n"
+      "Wall time: 2.04 ms\n"
      ]
     },
     {
@@ -2420,7 +2420,7 @@
      "text": [
       "405\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 4.99 ms\n"
+      "Wall time: 2.01 ms\n"
      ]
     }
    ],
@@ -2506,7 +2506,7 @@
      "text": [
       "400\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.94 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -2602,7 +2602,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 993 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -2680,8 +2680,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 15.6 ms\n",
-      "Wall time: 9.33 ms\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 3 ms\n"
      ]
     },
     {
@@ -2753,57 +2753,261 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1a79ca4",
+   "cell_type": "markdown",
+   "id": "4a2a3f13",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 15: Lens Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4d4b0b",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "76d34964",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "272d04f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "65834a62",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = \"rn=1,cm-,qp=3,cm=2,qp-,pc=4,ot=9,ab=5,pc-,pc=6,ot=7\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b859d5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "e6a693ef",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1320"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from functools import reduce\n",
+    "\n",
+    "def Hash(s):\n",
+    "    s = [*map(ord, s)]\n",
+    "    s[0] = s[0]*17%256\n",
+    "    return reduce(lambda a, b: (a+b)*17%256, s)\n",
+    "\n",
+    "sum(map(Hash, s.split(\",\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573add0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97b5d5f0",
+   "metadata": {},
+   "source": [
+    "### part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e4727ad6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"rn=1,cm-,qp=3,cm=2,qp-,pc=4,ot=9,ab=5,pc-,pc=6,ot=7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "2702d240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 0 ns\n",
+      "Wall time: 1.95 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "145"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "from functools import reduce\n",
+    "\n",
+    "def Hash(s):\n",
+    "    s = [*map(ord, s)]\n",
+    "    s[0] = s[0]*17%256\n",
+    "    return reduce(lambda a, b: (a+b)*17%256, s)\n",
+    "\n",
+    "def remove(label):\n",
+    "    hsh = Hash(label)\n",
+    "    if label in lst[hsh]:\n",
+    "        lst[hsh].remove(label)\n",
+    "        del d[label]\n",
+    "    \n",
+    "def add(label, focal_length):\n",
+    "    hsh = Hash(label)\n",
+    "    if label not in lst[hsh]:\n",
+    "        lst[hsh].append(label)\n",
+    "    d[label] = int(focal_length)\n",
+    "\n",
+    "\n",
+    "lst = [[] for i in range(256)]\n",
+    "d = {}\n",
+    "\n",
+    "for w in s.split(\",\"):\n",
+    "    if w[-1]==\"-\":\n",
+    "        remove(w[:-1])\n",
+    "    else:\n",
+    "        add(*w.split(\"=\"))\n",
+    "\n",
+    "sum([(i+1)*(j+1)*d[w] for i in range(256) for j, w in enumerate(lst[i])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38eb7f61",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efe5b819",
+   "id": "03b9490b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e122a53e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35798377",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c0d23d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb410fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1785de57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc253433",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae2b400",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf3ccebe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14bfdf31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d315e56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d76a76ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d85f6bc4",
    "metadata": {},
    "outputs": [],
    "source": []
