add adventOfCode2023 - Day 16: The Floor Will Be Lava

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1 ms\n"
      ]
     },
     {
@@ -254,7 +254,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.85 ms\n"
+      "Wall time: 1.05 ms\n"
      ]
     },
     {
@@ -413,7 +413,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -497,7 +497,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -599,7 +599,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.04 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -668,7 +668,7 @@
      "text": [
       "30\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.04 ms\n"
+      "Wall time: 998 µs\n"
      ]
     }
    ],
@@ -812,7 +812,7 @@
      "text": [
       "35\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.02 ms\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
      "text": [
       "46\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.05 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -1063,8 +1063,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 4.62 s\n",
-      "Wall time: 4.62 s\n"
+      "CPU times: total: 5.11 s\n",
+      "Wall time: 5.34 s\n"
      ]
     },
     {
@@ -1103,8 +1103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1.92 s\n",
-      "Wall time: 11.1 s\n"
+      "CPU times: total: 734 ms\n",
+      "Wall time: 891 ms\n"
      ]
     },
     {
@@ -1276,8 +1276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 15.6 ms\n",
-      "Wall time: 998 µs\n"
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1378,7 +1378,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 999 µs\n"
      ]
     },
     {
@@ -1461,7 +1461,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 999 µs\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1542,7 +1542,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.04 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -1751,7 +1751,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.04 ms\n"
+      "Wall time: 1 ms\n"
      ]
     },
     {
@@ -1842,7 +1842,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 109 ms\n",
-      "Wall time: 2.65 s\n"
+      "Wall time: 143 ms\n"
      ]
     },
     {
@@ -1951,7 +1951,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 39.1 ms\n"
+      "Wall time: 7 ms\n"
      ]
     },
     {
@@ -2100,7 +2100,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.04 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -2185,7 +2185,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.96 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -2282,7 +2282,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.04 ms\n"
+      "Wall time: 2 ms\n"
      ]
     },
     {
@@ -2420,7 +2420,7 @@
      "text": [
       "405\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 2.01 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -2506,7 +2506,7 @@
      "text": [
       "400\n",
       "CPU times: total: 0 ns\n",
-      "Wall time: 3 ms\n"
+      "Wall time: 1.01 ms\n"
      ]
     }
    ],
@@ -2680,8 +2680,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 3 ms\n"
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 10 ms\n"
      ]
     },
     {
@@ -2818,14 +2818,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "573add0d",
+   "id": "b2e0c553",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "97b5d5f0",
+   "id": "976e2603",
    "metadata": {},
    "source": [
     "### part 2"
@@ -2834,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e4727ad6",
+   "id": "15bdf499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2844,7 +2844,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "2702d240",
+   "id": "34492f9c",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 1.95 ms\n"
+      "Wall time: 0 ns\n"
      ]
     },
     {
@@ -2917,33 +2917,215 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e122a53e",
+   "cell_type": "markdown",
+   "id": "26f02d5d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Day 16: The Floor Will Be Lava"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d5f6f5",
+   "metadata": {},
+   "source": [
+    "### part 1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35798377",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "8c0d23d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "s = r\"\"\"\n",
+    ".|...\\....\n",
+    "|.-.\\.....\n",
+    ".....|-...\n",
+    "........|.\n",
+    "..........\n",
+    ".........\\\n",
+    "..../.\\\\..\n",
+    ".-.-/..|..\n",
+    ".|....-|.\\\n",
+    "..//.|....\n",
+    "\"\"\".strip().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d466f0dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 3 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import numpy as np\n",
+    "\n",
+    "MOVES= np.array([[0,+1], [+1,0], [0,-1], [-1,0]])\n",
+    "\n",
+    "def move(cur, direction=0):\n",
+    "    if (cur<(0,0)).any() or (arr.shape<=cur).any():\n",
+    "        return\n",
+    "    if energized[*cur]&(1<<direction):\n",
+    "        return\n",
+    "    energized[*cur] |= 1 << direction\n",
+    "    c = arr[*cur]\n",
+    "    if c=='\\\\' :\n",
+    "        direction = (direction + (-1)**(direction) )%4\n",
+    "    elif c=='/' :\n",
+    "        direction = (direction + (-1)**(direction+1) )%4\n",
+    "    elif direction%2==0 and c=='|' :\n",
+    "        direction = 1\n",
+    "        move(cur+MOVES[direction], direction)\n",
+    "        direction = 3\n",
+    "    elif direction%2 and c=='-' :\n",
+    "        direction = 0\n",
+    "        move(cur+MOVES[direction], direction)\n",
+    "        direction = 2\n",
+    "    move(cur+MOVES[direction], direction)\n",
+    "\n",
+    "arr = np.array([*map(list, s)])\n",
+    "energized = np.zeros(arr.shape, dtype=int)\n",
+    "\n",
+    "cur = np.array([0,0])\n",
+    "move(cur)\n",
+    "\n",
+    "np.sum(energized>0)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb410fcd",
+   "id": "7840b588",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11a1fed4",
+   "metadata": {},
+   "source": [
+    "### part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "99dbcf8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = r\"\"\"\n",
+    ".|...\\....\n",
+    "|.-.\\.....\n",
+    ".....|-...\n",
+    "........|.\n",
+    "..........\n",
+    ".........\\\n",
+    "..../.\\\\..\n",
+    ".-.-/..|..\n",
+    ".|....-|.\\\n",
+    "..//.|....\n",
+    "\"\"\".strip().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "94b9a0c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 46.9 ms\n",
+      "Wall time: 37.3 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import sys\n",
+    "sys.setrecursionlimit(30_000)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "MOVES= np.array([[0,+1], [+1,0], [0,-1], [-1,0]])\n",
+    "\n",
+    "def move(energized, cur, direction=0):\n",
+    "    if (cur<(0,0)).any() or (arr.shape<=cur).any():\n",
+    "        return\n",
+    "    if energized[*cur]&(1<<direction):\n",
+    "        return\n",
+    "    energized[*cur] |= 1 << direction\n",
+    "    c = arr[*cur]\n",
+    "    if c=='\\\\' :\n",
+    "        direction = (direction + (-1)**(direction) )%4\n",
+    "    elif c=='/' :\n",
+    "        direction = (direction + (-1)**(direction+1) )%4\n",
+    "    elif direction%2==0 and c=='|' :\n",
+    "        direction = 1\n",
+    "        move(energized, cur+MOVES[direction], direction)\n",
+    "        direction = 3\n",
+    "    elif direction%2 and c=='-' :\n",
+    "        direction = 0\n",
+    "        move(energized, cur+MOVES[direction], direction)\n",
+    "        direction = 2\n",
+    "    move(energized, cur+MOVES[direction], direction)\n",
+    "\n",
+    "def calc(cur, direction):\n",
+    "    energized = np.zeros(arr.shape, dtype=int)\n",
+    "    move(energized, cur, direction)\n",
+    "    return np.sum(energized>0)\n",
+    "\n",
+    "arr = np.array([*map(list, s)])\n",
+    "X, Y = arr.shape\n",
+    "\n",
+    "right = [calc(np.array([i,0]), 0) for i in range(X)]\n",
+    "left = [calc(np.array([i,Y-1]), 2) for i in range(X)]\n",
+    "down = [calc(np.array([0,j]), 1) for j in range(Y)]\n",
+    "up = [calc(np.array([X-1,j]), 3) for j in range(Y)]\n",
+    "\n",
+    "max(left+right+down+up)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1f6852d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2951,7 +3133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1785de57",
+   "id": "bafab202",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2959,7 +3141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc253433",
+   "id": "d2d5a782",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2967,7 +3149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae2b400",
+   "id": "cd9d7bbd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2975,23 +3157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3ccebe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14bfdf31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d315e56",
+   "id": "ce67f411",
    "metadata": {},
    "outputs": [],
    "source": []
