add Table of contents

--- a/adventofcode.com/adventOfCode-2023.ipynb
+++ b/adventofcode.com/adventOfCode-2023.ipynb
@@ -10,6 +10,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a4501384",
+   "metadata": {},
+   "source": [
+    "## Table of contents\n",
+    "- [Day 1: Trebuchet?!](#Day-1:-Trebuchet?!)\n",
+    "- [Day 2: Cube Conundrum](#Day-2:-Cube-Conundrum)\n",
+    "- [Day 3: Gear Ratios](#Day-3:-Gear-Ratios)\n",
+    "- [Day 4: Scratchcards](#Day-4:-Scratchcards)\n",
+    "- [Day 5: If You Give A Seed A Fertilizer](#Day-5:-If-You-Give-A-Seed-A-Fertilizer)\n",
+    "- [Day 6: Wait For It](#Day-6:-Wait-For-It)\n",
+    "- [Day 7: Camel Cards](#Day-7:-Camel-Cards)\n",
+    "- [Day 8: Haunted Wasteland](#Day-8:-Haunted-Wasteland)\n",
+    "- [Day 9: Mirage Maintenance](#Day-9:-Mirage-Maintenance)\n",
+    "- [Day 10: Pipe Maze](#Day-10:-Pipe-Maze)\n",
+    "- [Day 11: Cosmic Expansion](#Day-11:-Cosmic-Expansion)\n",
+    "- [Day 12: Hot Springs](#Day-12:-Hot-Springs)\n",
+    "- [Day 13: Point of Incidence](#Day-13:-Point-of-Incidence)\n",
+    "- [Day 14: Parabolic Reflector Dish](#Day-14:-Parabolic-Reflector-Dish)\n",
+    "- [Day 15: Lens Library](#Day-15:-Lens-Library)\n",
+    "- [Day 16: The Floor Will Be Lava](#Day-16:-The-Floor-Will-Be-Lava)\n",
+    "- Day 17: Clumsy Crucible\n",
+    "- Day 18: Lavaduct Lagoon\n",
+    "- [Day 19: Aplenty](#Day-19:-Aplenty)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ce478c0",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "597414e3",
    "metadata": {},
    "source": [
@@ -2874,7 +2909,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fc3d9b",
+   "id": "0b3af384",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b609a598",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2889,7 +2932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69e4460",
+   "id": "2100519d",
    "metadata": {},
    "source": [
     "## Day 19: Aplenty"
@@ -2897,7 +2940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a9d803",
+   "id": "cad08d29",
    "metadata": {},
    "source": [
     "### part 1"
@@ -2983,7 +3026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48c5c45",
+   "id": "c8d22f2e",
    "metadata": {},
    "source": [
     "### part 2"
@@ -3020,7 +3063,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "a450b179",
+   "id": "dcd79990",
    "metadata": {},
    "outputs": [
     {
@@ -3089,7 +3132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a9a331c",
+   "id": "6140045c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3097,7 +3140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731980a9",
+   "id": "0449401a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3105,7 +3148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c2541f",
+   "id": "d863d0a8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3113,7 +3156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4723254",
+   "id": "2f15174d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3121,7 +3164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "595a0952",
+   "id": "3c440b94",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3129,7 +3172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be4be697",
+   "id": "8554b77d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3137,7 +3180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8552d10b",
+   "id": "003ab220",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3145,7 +3188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4756a1a7",
+   "id": "8fe41837",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3193,7 +3236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0cc1308",
+   "id": "961dbb1b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3201,7 +3244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8cacbc",
+   "id": "a3981ed4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3223,7 +3266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
